--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="my_string">Just a simple string</string>
+    <string name="com.crashlytics.useFirebaseAppId">true</string>
 </resources>
